--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ a {
 .video-topo {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 100svh;
   overflow: hidden;
 }
 
@@ -356,7 +356,7 @@ footer .redes img {
 .carrossel-track {
   display: flex;
   gap: 20px;
-  animation: scrollLoop 60s linear infinite;
+  animation: scrollLoop 120s linear infinite;
   width: max-content;
 }
 
@@ -419,7 +419,7 @@ footer .redes img {
 /* Responsivo */
 @media (max-width: 768px) {
   .carrossel-track {
-    animation-duration: 90s;
+    animation-duration: 160s;
   }
 
   .imagens-transformacao {
@@ -450,5 +450,22 @@ footer .redes img {
   .imagens-transformacao.unica img {
     width: 100%;
     max-width: 90vw;
+  }
+}
+@media (max-width: 768px) {
+  .video-topo {
+    height: 50vh; /* reduz a altura do vídeo pela metade */
+  }
+
+  .video-overlay {
+    padding: 40px 20px;
+  }
+
+  .video-overlay h1 {
+    font-size: 1.3rem;
+  }
+
+  .video-overlay p {
+    font-size: 1rem;
   }
 }
