--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,6 @@ a {
   }
 }
 
-
 .video-topo {
   position: relative;
   width: 100%;
@@ -243,7 +242,7 @@ a {
 .card {
   min-width: 280px;
   scroll-snap-align: start;
-  background: url("../img/textura-branca.png") no-repeat center;
+  background: url("../img/textura-laranja.png") no-repeat center;
   background-size: cover;
   padding: 20px;
   border-radius: 10px;
