--- a/css/style.css
+++ b/css/style.css
@@ -205,8 +205,9 @@ a {
 .quemsomos .imagens {
   display: flex;
   justify-content: center;
-  gap: 20px;
-  margin-top: 20px;
+  gap: 30px;
+  margin-top: 30px;
+  flex-wrap: wrap;
 }
 
 .quemsomos .imagens img {
@@ -214,6 +215,8 @@ a {
   width: 100%;
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
+  height: auto;
+  object-fit: cover;
 }
 
 @media (max-width: 768px) {
